Add publish tasks

--- a/ARMDServer.csproj
+++ b/ARMDServer.csproj
@@ -4,6 +4,15 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>latest</LangVersion>
+
+    <Deterministic>false</Deterministic>
+    <PublishSingleFile>true</PublishSingleFile>
+    <PublishTrimmed>true</PublishTrimmed>
+    <CopyOutputSymbolsToPublishDirectory>false</CopyOutputSymbolsToPublishDirectory>
+    <RuntimeIdentifiers>win-x86;win-x64;linux-x64</RuntimeIdentifiers>
+
+    <Company>BaltSystem</Company>
+    <Product>ARMDServer</Product>
   </PropertyGroup>
 
   <ItemGroup>
