--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "console": "internalConsole",
             "cwd": "${workspaceFolder}",
             "name": ".NET Core Launch (console)",
-            "preLaunchTask": "build",
+            "preLaunchTask": "build Debug (Win|x64)",
             "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/ARMDServer.dll",
             "request": "launch",
             "stopAtEntry": false,
