--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,27 +2,21 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "build",
-                "${workspaceFolder}/ARMDServer.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
+            "label": "build Debug (Win|x64)",
+            "command": "dotnet build -c Debug -r win-x64",
+            "type": "shell",
             "problemMatcher": "$msCompile"
         },
         {
-            "label": "publish",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "publish",
-                "${workspaceFolder}/ARMDServer.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
+            "label": "publish (Linux|x64)",
+            "command": "dotnet publish -r linux-x64 -c Release",
+            "type": "shell",
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "publish (Win|x64)",
+            "command": "dotnet publish -r win-x64 -c Release",
+            "type": "shell",
             "problemMatcher": "$msCompile"
         }
     ]
