--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,13 +9,13 @@
         },
         {
             "label": "publish (Linux|x64)",
-            "command": "dotnet publish -r linux-x64 -c Release",
+            "command": "dotnet publish -r linux-x64 -c Release /p:PublishSingleFile=true",
             "type": "shell",
             "problemMatcher": "$msCompile"
         },
         {
             "label": "publish (Win|x64)",
-            "command": "dotnet publish -r win-x64 -c Release",
+            "command": "dotnet publish -r win-x64 -c Release /p:PublishSingleFile=true",
             "type": "shell",
             "problemMatcher": "$msCompile"
         }
