--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "cwd": "${workspaceFolder}",
             "name": ".NET Core Launch (console)",
             "preLaunchTask": "build Debug (Win|x64)",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/ARMDServer.dll",
+            "program": "${workspaceFolder}/ARMDServer/bin/Debug/netcoreapp3.1/ARMDServer.dll",
             "request": "launch",
             "stopAtEntry": false,
             "type": "coreclr"
