Add Tests for BinaryDateTime convertion from span

--- a/ARMDServer.Tests/ARMDServer.Tests.csproj
+++ b/ARMDServer.Tests/ARMDServer.Tests.csproj
@@ -5,6 +5,7 @@
 
     <IsPackable>false</IsPackable>
     <LangVersion>latest</LangVersion>
+    <DefaultItemExcludes>obj/**</DefaultItemExcludes>
   </PropertyGroup>
 
   <ItemGroup>
